Fix button z-indexing.

--- a/src/yorha/form.styl
+++ b/src/yorha/form.styl
@@ -66,6 +66,7 @@ button:not(:disabled), .button
 
   // Top/bottom lines.
   position relative
+  z-index 1
   &:before
     content ''
     transition all $transition-dur
